--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: lafd
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Data Angels LAFD project
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Author: Neal Fultz
+Maintainer: Neal Fultz <nfultz@gmail.com>
+Description: Analysis of LAFD dispatch times.
+License: N/A
+Depends: lme4, ggplot2, dplyr, stackoverflow
 Encoding: UTF-8
 LazyData: true
